# Snake-by-C

./: CMakeLists.txt  README  README.md  vcpkg.json
include/: border.h  constants.h  game.h  linked_list.h  obstacle.h  rendering.h  snake.h  structure.h  utils.h
src/: border.c  game.c  linked_list.c  main.c  obstacle.c  rendering.c  snake.c  utils.c
